--- a/style.css
+++ b/style.css
@@ -13,12 +13,14 @@ body{
   width: 80%;
   height: 50%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
 }
 
 .key{
-  width: 100px;
+  min-width: 80px;
+  max-width:110px
   height: 70px;
   border: 5px solid #569e04;
   border-radius: 10px;
@@ -28,6 +30,7 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex:1;
   align-items: center;
   transition-duration: 0.07s;
   color: white;
